Fix image stretching weirdly in ProjectDetail page

--- a/src/pages/ProjectDetail/ProjectDetail.scss
+++ b/src/pages/ProjectDetail/ProjectDetail.scss
@@ -10,6 +10,7 @@
 
 .project-image {
   width: 100%;
+  object-fit: cover;
 }
 
 .project-hero {
